--- a/overlay/packages/apps/Camera/res/values/config.xml
+++ b/overlay/packages/apps/Camera/res/values/config.xml
@@ -14,5 +14,9 @@
      limitations under the License.
 -->
 <resources>
+
     <string name="videoHdrParam">sony-video-hdr</string>
+
+    <bool name="enableShutterSpeed">true</bool>
+
 </resources>
